[project]
name = "langgraph_agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.18",
    "langchain-groq>=1.1.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.10",
    "langsmith>=0.8.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
